--- a/style.css
+++ b/style.css
@@ -1,5 +1,67 @@
 body {
+  width: 100;
+  margin: 0%;
+}
+
+h1 {
+  text-align: center;
+}
+
+.OnlyImage {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.active {
+  text-align: center;
+  padding-left: 10px;
+  padding-right: 10px;
+  background-color: beige;
+  margin-left: 30%;
+  margin-right: 30%;
+}
+
+figcaption {
+  font-size: smaller;
+  text-align: center;
+  margin: auto;
+}
+
+p {
+  display: block;
+  width: 800px;
+  text-align: center;
+  margin: auto;
+}
+
+#details {
+  background-color: red;
+  columns: 100px 4;
+}
+
+#details div {
   width: 100%;
   height: 100%;
-  margin: 0;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
+#details div p {
+  width: 100%;
+  height: 100%;
+}
+
+text-align: center #details>div {
+  float: left;
+  background-color: red;
+  text-align: center;
+  margin: auto;
+
+}
+
+div {
+  width: 25%
 }
